2018-06-26  Florian Weimer  <fweimer@redhat.com>

	* libio/Makefile (tests-internal): Add tst-vtables,
	tst-vtables-interposed.
	* libio/tst-vtables.c: New file.
	* libio/tst-vtables-common.c: Likewise.
	* libio/tst-vtables-interposed.c: Likewise.

2018-06-26  Florian Weimer  <fweimer@redhat.com>

	[BZ #23313]
	* libio/vtables.c (check_stdfiles_vtables): New ELF constructor.

2017-11-15  Steve Ellcey  <sellcey@cavium.com>

	[BZ #22442]
	* sysdeps/unix/sysv/linux/if_index.c (__if_nametoindex):
	Check if ifname is too long.

2018-06-29  Daniel Alvarez  <dalvarez@redhat.com>
	    Jakub Sitnicki  <jkbs@redhat.com>

	[BZ #21812]
	* sysdeps/unix/sysv/linux/ifaddrs.c (getifaddrs_internal): Retry
	on NLM_F_DUMP_INTR.

2018-06-28  Florian Weimer  <fweimer@redhat.com>

	[BZ #23349]
	* time/bits/types/struct_timespec.h: Change header inclusion guard to
	_STRUCT_TIMESPEC.

2018-05-24  Gabriel F. T. Gomes  <gabriel@inconstante.eti.br>

	[BZ #23171]
	* math/math.h [C++] (iseqsig): Fix parameter type for the long
	double version.

2018-06-01  Florian Weimer  <fweimer@redhat.com>

	[BZ #23236]
	* libio/strfile.h (struct _IO_str_fields): Rename members to
	discourage their use and add comment.
	(_IO_STR_DYNAMIC): Remove unused macro.
	* libio/strops.c (_IO_str_init_static_internal): Do not use
	callback pointers.  Call malloc and free.
	(_IO_str_overflow): Do not use callback pointers.  Call malloc
	and free.
	(enlarge_userbuf): Likewise.
	(_IO_str_finish): Call free.
	* libio/wstrops.c (_IO_wstr_init_static): Initialize
	_allocate_buffer_unused.
	(_IO_wstr_overflow): Do not use callback pointers.  Call malloc
	and free.
	(enlarge_userbuf): Likewise.
	(_IO_wstr_finish): Call free.
	* debug/vasprintf_chk.c (__vasprintf_chk): Initialize
	_allocate_buffer_unused, _free_buffer_unused.
	* libio/memstream.c (__open_memstream): Likewise.
	* libio/vasprintf.c (_IO_vasprintf): Likewise.
	* libio/wmemstream.c (open_wmemstream): Likewise.

2018-05-23  H.J. Lu  <hongjiu.lu@intel.com>
